<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/mainNavGroup"
        android:checkableBehavior="single">
        <item android:id="@+id/dictionaryFragment"
            android:title="@string/nav_dictionaries"
            android:icon="@drawable/ic_action_book"/>

        <item android:id="@+id/favoriteFragment"
            android:title="@string/nav_favorites"
            android:icon="@drawable/ic_favorite"/>
    </group>


    <group android:id="@+id/secondaryNavGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/searchHelpFragment"
            android:title="@string/nav_search_tips"
            android:icon="@drawable/ic_help_white_18dp"/>
        <item android:id="@+id/shareApp"
            android:title="@string/nav_share"
            android:icon="@drawable/ic_share"/>
        <item android:id="@+id/aboutFragment"
            android:title="@string/nav_about"
            android:icon="@drawable/ic_info"/>
    </group>
</menu>