<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.FaqQuestionText"
            android:text="@string/search_help_faq_translator" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            style="@style/AppTheme.FaqQuestionReply"
            android:text="@string/search_help_faq_translator_reply" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            style="@style/AppTheme.FaqQuestionText"
            android:text="@string/search_help_faq_no_results" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            style="@style/AppTheme.FaqQuestionReply"
            android:text="@string/search_help_faq_no_results_reply" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            style="@style/AppTheme.FaqQuestionText"
            android:text="@string/search_help_faq_no_results_complex_word"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            style="@style/AppTheme.FaqQuestionReply"
            android:text="@string/search_help_faq_no_results_complex_word_reply" />
    </LinearLayout>
</ScrollView>
