<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/searchFragment">
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.ocram.qichwadic.features.search.ui.SearchFragment"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/search_fragment_to_dictionaries_fragment"
            app:destination="@id/dictionaryFragment"/>
        <action
            android:id="@+id/search_fragment_to_favorites_fragment"
            app:destination="@id/favoriteFragment"/>
        <action
            android:id="@+id/search_fragment_to_about_fragment"
            app:destination="@id/aboutFragment"/>
        <action
            android:id="@+id/search_fragment_to_search_help_fragment"
            app:destination="@id/searchHelpFragment"/>
    </fragment>
    <fragment
        android:id="@+id/searchHelpFragment"
        android:label="@string/nav_search_tips"
        android:name="com.ocram.qichwadic.features.help.ui.SearchHelpFragment"
        tools:layout="@layout/fragment_search_help">
    </fragment>
    <fragment
        android:id="@+id/dictionaryFragment"
        android:label="@string/nav_dictionaries"
        android:name="com.ocram.qichwadic.features.dictionaries.ui.DictionaryFragment"
        tools:layout="@layout/fragment_dictionary">
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.ocram.qichwadic.features.favorites.ui.FavoriteFragment"
        android:label="@string/nav_favorites"
        tools:layout="@layout/fragment_favorite">
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.ocram.qichwadic.features.about.ui.AboutFragment"
        android:label="@string/nav_about"
        tools:layout="@layout/fragment_about">
    </fragment>
</navigation>