<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/mToolbar"
            layout="@layout/toolbar_basic"
            app:popupTheme="@style/ThemeOverlay.Qichwa"
            app:layout_scrollFlags="scroll|enterAlways"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glLeftLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.10" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glRightLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.90" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.03" />

            <ImageView
                android:id="@+id/ivQichwa20Logo"
                android:layout_width="0dp"
                android:layout_height="124dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/logo_q_scaled"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/glTop" />

            <TextView
                android:id="@+id/tvDevelopedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ivQichwa20Logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_medium"
                android:textStyle="bold"
                android:text="@string/author_app_name"/>

            <TextView
                android:id="@+id/tvAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/versionName"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDevelopedBy" />

            <TextView
                android:id="@+id/tvProjectCollab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="@id/glLeftLogo"
                app:layout_constraintRight_toRightOf="@id/glRightLogo"
                app:layout_constraintTop_toBottomOf="@id/tvAppVersion"
                android:textSize="@dimen/text_size_normal"
                android:textColorLink="@color/text_link"
                android:text="@string/about_project_collaboration"/>

            <Button
                android:id="@+id/btnContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_big"
                android:padding="@dimen/padding_small"
                android:text="@string/about_contact"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="@id/glRightLogo"
                app:layout_constraintStart_toStartOf="@id/glLeftLogo"
                app:layout_constraintTop_toBottomOf="@id/tvProjectCollab" />

            <Button
                android:id="@+id/btnRateApp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@string/about_rate_app"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="@id/glRightLogo"
                app:layout_constraintStart_toStartOf="@id/glLeftLogo"
                app:layout_constraintTop_toBottomOf="@id/btnContact"/>

            <Button
                android:id="@+id/btnYoutube"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@string/about_visit_qichwa20_youtube"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="@id/glRightLogo"
                app:layout_constraintStart_toStartOf="@id/glLeftLogo"
                app:layout_constraintTop_toBottomOf="@id/btnRateApp" />

            <Button
                android:id="@+id/btnWebsite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@string/about_visit_qichwa20"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="@id/glRightLogo"
                app:layout_constraintStart_toStartOf="@id/glLeftLogo"
                app:layout_constraintTop_toBottomOf="@id/btnYoutube" />


            <TextView
                android:id="@+id/tvCopyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/about_copyright"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnWebsite"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


