<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".features.help.ui.SearchHelpWritingFragment"
        android:padding="@dimen/padding_medium">

        <TextView
            android:id="@+id/tvWritingTipsIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.FaqQuestionText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/search_help_writing_tips_intro"/>

        <TextView
            android:id="@+id/tvWritingTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            style="@style/AppTheme.FaqQuestionReply"
            app:layout_constraintTop_toBottomOf="@id/tvWritingTipsIntro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/search_help_writing_tips"/>

        <TextView
            android:id="@+id/tvQillqayVideoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/list_item_header"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/tvWritingTips"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/search_help_writing_video_text"/>

        <ImageView
            android:id="@+id/ivQillqayVideo"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/margin_small"
            app:srcCompat="@drawable/qillqay_youtube_video"
            android:scaleType="centerInside"
            app:layout_constraintTop_toBottomOf="@+id/tvQillqayVideoText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnWatchQillqayVideo"
            android:layout_height="0dp"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/ivQillqayVideo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Ver"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
