<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/mToolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/llSearchOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:background="@color/primary_color"
            android:orientation="horizontal"
            android:layout_below="@+id/mToolbar"
            android:weightSum="10">

            <Spinner
                android:id="@+id/spSearchTypes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:entries="@array/searchTypes"
                android:textAlignment="center"
                android:background="@drawable/spinner_gradient_dicts"
                android:spinnerMode="dialog"
                android:layout_weight="5">
            </Spinner>

            <View
                android:id="@+id/vSeparator"
                android:layout_width="1dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_height="match_parent"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/tvQichwaLang"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/accent_color"
                android:layout_weight="2"
                android:text="@string/search_lang_qu"
                />

            <ImageView
                android:id="@+id/ivSwapLanguages"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_swap_horiz_white_24dp"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"/>

            <Spinner
                android:id="@+id/spDictLangs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/dictLangs"
                android:textAlignment="center"
                android:background="@drawable/spinner_gradient_dicts"
                android:spinnerMode="dialog"
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSearchMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/llSearchOptions"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_mode_online"
                android:textSize="@dimen/text_size_small"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swOfflineSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/local_search"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/custom_text_color"
                app:thumbTint="@color/list_item_header"
                app:switchPadding="@dimen/padding_small"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:checked="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_mode_local"
                android:textSize="@dimen/text_size_small"/>

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fcSearchResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/llSearchMode"
            android:name="com.ocram.qichwadic.features.search.ui.results.list.SearchResultsFragment"/>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:backgroundTint="@color/list_item_header"
        app:tint="@color/text_icons_color"
        android:tint="@color/text_icons_color"
        app:layout_behavior="com.ocram.qichwadic.features.search.ui.custom.ScrollAwareFABBehavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>


